# kitty-plus

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
scripts/: package.sh
src/: config.rs  main.rs  terminal.rs
src/core/: ai.rs  mod.rs  plugins.rs  session.rs
src/gpu/: mod.rs
src/ui/: app.rs  command_palette.rs  mod.rs
